# goit-de-hw-06

./: .gitignore  data_processor.py  pyproject.toml  sensor_producer.py
